<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:id="@+id/tableLayout"
        android:layout_width="344dp"
        android:layout_height="272dp"
        android:layout_centerHorizontal="true"

        android:layout_marginBottom="238dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:stretchColumns="0,1,2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="393dp"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center">

            <TextView
                android:id="@+id/place_number_1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_column="0"
                android:layout_margin="4dp"
                android:background="@color/buttonColor"
                android:gravity="center"
                android:onClick="handleSpaceOnClick"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/place_number_2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_column="1"
                android:layout_margin="4dp"
                android:background="@color/buttonColor"
                android:gravity="center"
                android:onClick="handleSpaceOnClick"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/place_number_3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_column="2"
                android:layout_margin="4dp"
                android:background="@color/buttonColor"
                android:gravity="center"
                android:onClick="handleSpaceOnClick"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>


        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center">

            <TextView
                android:id="@+id/place_number_4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_column="0"
                android:layout_margin="4dp"
                android:background="@color/buttonColor"
                android:gravity="center"
                android:onClick="handleSpaceOnClick"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/place_number_5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_column="1"
                android:layout_margin="4dp"
                android:background="@color/buttonColor"
                android:gravity="center"
                android:onClick="handleSpaceOnClick"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/place_number_6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_column="2"
                android:layout_margin="4dp"
                android:background="@color/buttonColor"
                android:gravity="center"
                android:onClick="handleSpaceOnClick"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:gravity="center_horizontal|center">

            <TextView
                android:id="@+id/place_number_7"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_column="0"
                android:layout_margin="4dp"
                android:background="@color/buttonColor"
                android:gravity="center"
                android:onClick="handleSpaceOnClick"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/place_number_8"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_column="1"
                android:layout_margin="4dp"
                android:background="@color/buttonColor"
                android:gravity="center"
                android:onClick="handleSpaceOnClick"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/place_number_9"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_column="2"
                android:layout_margin="4dp"
                android:background="@color/buttonColor"
                android:gravity="center"
                android:onClick="handleSpaceOnClick"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>


    </TableLayout>

    <TextView
        android:id="@+id/messages"
        android:layout_width="368dp"
        android:layout_height="53dp"
        android:layout_marginBottom="161dp"
        android:layout_marginEnd="56dp"
        android:layout_marginStart="56dp"
        android:gravity="center"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>