...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <Button
        android:id="@+id/enterTTTButton"
        android:layout_width="112dp"
        android:layout_height="56dp"
        android:layout_marginBottom="156dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="moveToNextPageOnClick"
        android:radius="3dip"
...
