<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <RadioGroup
        android:id="@+id/gameModeRadioGroup"
        android:layout_width="230dp"
        android:layout_height="0dp"
        android:layout_marginBottom="329dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gameModePrompt"
        app:layout_constraintTop_toBottomOf="@+id/gameModePrompt">

        <RadioButton
            android:id="@+id/humanVsHuman"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"
            android:checked="false"
            android:onClick="gameModeOptionClick"
            android:text="Human vs Human" />

        <RadioButton
            android:id="@+id/humanVsComputer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"
            android:checked="false"
            android:onClick="gameModeOptionClick"
            android:text="Human vs Computer" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/whoGoesFirstRadioGroup"
        android:layout_width="230dp"
        android:layout_height="108dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="224dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/humanGoesFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="20dp"
            android:checked="false"
            android:onClick="gameOrderClick"
            android:text="Human" />

        <RadioButton
            android:id="@+id/computerGoesFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginTop="10dp"
            android:checked="false"
            android:onClick="gameOrderClick"
            android:text="Computer" />
    </RadioGroup>

    <TextView
        android:id="@+id/gameModePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="42dp"
        android:text="Pick game mode:"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/gameModeRadioGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startTheGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="playGameButtonClicked"
        android:text="Start the game "
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/whoGoesFirstPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="260dp"
        android:layout_marginStart="8dp"
        android:text="Pick who goest first:"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/whoGoesFirstRadioGroup"
        app:layout_constraintTop_toBottomOf="@+id/gameModeRadioGroup"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>